[package]
name = "h264_nal_paging"
description = "H.264 stream paging tool for tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
features = ["io-util"]
default-features = false
version = "1"
