[package]
name = "h264_nal_paging"
description = "H.264 stream paging tool for tokio"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository="https://github.com/thinkier/h264_nal_paging"
documentation="https://docs.rs/h264_nal_paging"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
features = ["io-util"]
default-features = false
version = "1"
